apps/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: apps
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: myapp
